--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 !/public/robots.txt
 /vendor/assets/bower_components
 /vendor/assets/.bowerrc
+
+# Ignore application configuration
+/config/application.yml
+Gemfile.lock
